gcc/testsuite/rust/rustc/ui/async-await/issue-70594.rs
// edition:2018

async fn fun() {
    [1; ().await];
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
// { dg-error ".E0277." "" { target *-*-* } .-3 }
// { dg-error ".E0277." "" { target *-*-* } .-4 }
}

fn main() {}

